# node-dicom-rs

./: .gitignore  .yarnrc.yml  Cargo.toml  README.md  bun.lockb  index.d.ts  index.js  index.mjs  package.json  pnpm-lock.yaml  test.mjs  tsconfig.json
.github/workflows/: CI.yml
__test__/: async-callback-test.js  index.spec.ts  tsconfig.json
__test__/fixtures/: test.dcm
docker/: docker-compose.yml
docs/: STORESCU_EVENTS.md  dicomfile.md  dicomweb.md  helpers.md  on-before-store.md  qido-async-await.md  qido-rs.md  storescp.md  storescu.md  tag-extraction.md  tag-grouping-refactor-spec.md  wado-rs.md
examples/pacs-sqlite/: README.md  REFERENCE.md  SETUP.md  SUMMARY.md  nitro.config.ts  nuxt.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: README.md  dicomfile-demo.mjs  dicomweb-demo.mjs  downloadTestData.sh  initialize-testdata.mjs  object.mjs  onBeforeStore.mjs  send-with-events.mjs  send.mjs  server.mjs  storescp-demo.mjs  storescu-demo.mjs
playground/demos/: README.md  dicom-api-demo.mjs  dicomfile-render-demo.mjs  dicomweb-server-demo.mjs  final-test.sh  pixel-processing-demo.mjs  qido-cors-complete.mjs  qido-cors-demo.mjs  send-to-anon.mjs  storescp-anonymization-demo.mjs  storescp-validation-demo.mjs  tag-update-demo.mjs  test-anonymization.sh  test-get-processed-pixel.mjs  test-process-pixel-data.mjs  test-tag-consolidation.mjs  verify-anonymization.mjs  verify-updates.mjs  wado-bulkdata-demo.mjs  wado-cors-demo.mjs  wado-frames-demo.mjs  wado-metadata-demo.mjs  wado-multipart-demo.mjs  wado-rendered-demo.mjs  wado-server-demo.mjs
src/: lib.rs
src/object/: mod.rs
src/storescp/: mod.rs  s3_storage.rs  sop_classes.rs  store_async.rs  transfer.rs
src/storescu/: mod.rs  s3_storage.rs  store_async.rs
src/utils/: dicom_tags.rs  helpers.rs  image_processing.rs  mod.rs  s3.rs  tag_extractor.rs
src/web/: mod.rs  qido.rs  wado.rs
test-received/: anonymized-test.dcm  updated-test.dcm
testdata/1.3.6.1.4.1.9328.50.2.125354/: 00000001.dcm  00000002.dcm  00000003.dcm  00000004.dcm  00000005.dcm  00000006.dcm  00000007.dcm  00000008.dcm  00000009.dcm  00000010.dcm  00000011.dcm  00000012.dcm  00000013.dcm  00000014.dcm  00000015.dcm  00000016.dcm  00000017.dcm  00000018.dcm  00000019.dcm  00000020.dcm  00000021.dcm  00000022.dcm  00000023.dcm  (+248 more)
(+1597 files in other folders)
