[package]
edition = "2021"
name = "node-dicom-rs"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[features]
# default = ["transcode"] /// enable if transcoding is desired
# support DICOM transcoding
transcode = ["dep:dicom-pixeldata"]

[dependencies]
napi = { version = "2.16.11", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.16.12"
clap = { version = "4.0.18", features = ["derive"] }
dicom-dump = "=0.7.1"
dicom-object = "=0.7.1"
dicom-core = "0.7.1"
dicom-ul = "0.7.1"
dicom-encoding = "0.7.1"
dicom-dictionary-std = "0.7.0"
dicom-transfer-syntax-registry = "0.7.1"
dicom-pixeldata = { version = "0.7.1", optional = true }
walkdir = "2.3.2"
indicatif = "0.17.0"
snafu = "0.8"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tokio = { version = "1", features = ["default", "fs", "net"] }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
